# CECS2

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
API-Headers/: CECS.hpp  CECSErrorCodes.hpp  CECSMacros.hpp  CECSModule.hpp  CECSSingleton.hpp  version.h.in
src/: CECS.cpp  CECSErrorCodes.cpp  CECSModule.cpp  CECSSingleton.cpp
unitTests/: TestsDescriptionLogger.cpp  test00_SPDLOG.cpp  test01_Basic-Operations.cpp  test02_Basic-Macros.cpp  test03_Different-Sink-Patterns.cpp  test03_MsgLogging-Macros.cpp  test04_UserErrorCodes-Macros.cpp  testCECSSingleton.cpp  testSPDLOG.cpp  testSingleton.cpp  test_Basic-Operations.cpp  test_Modules_A.cpp
unitTests/include/: TestsDescriptionLogger.hpp
